# trpg-supporter

./: .coverage  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  README.md  alembic.ini  index.html  mkdocs.yml  mypy.ini  pyproject.toml  trpg-supporter.code-workspace  trpg.db
.github/workflows/: ci.yml
backend/: alembic.ini
backend/app/: db.py  main.py
backend/app/api/v1/: characters.py  health.py
backend/app/core/: config.py  db.py  logging.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  base.py  character.py  entities.py  init.py  player.py
backend/app/schemas/: __init__.py  characters.py  common.py
backend/app/scripts/: seed.py
backend/app/services/: characters.py  dice_log.py  session_log.py  session_state.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_characters.py
backend/tests/: test_characters_api.py  test_db_connect.py  test_health.py  test_migration_characters.py
cli/: main.py  state.py
cli-reference/: index.html
core/dice/: __init__.py
core/initiative/: __init__.py  init.py
core/log/: __init__.py
demo-cli-mvp/: index.html
docs/: cli-reference.md  index.md  quickstart.md
frontend/: .eslintrc.cjs  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vitest.config.ts
frontend/e2e/: characters.spec.ts
frontend/src/: App.css  App.tsx  main.tsx  setupTests.ts
frontend/src/components/: Alert.tsx  CharacterForm.test.tsx  CharacterForm.tsx  CharactersTable.test.tsx  CharactersTable.tsx  ErrorBoundary.tsx
frontend/src/components/__snapshots__/: CharacterForm.test.tsx.snap  CharactersTable.test.tsx.snap
frontend/src/hooks/: characters.ts  useCharacters.ts
frontend/src/lib/: api.ts  queryClient.ts
frontend/src/pages/: CharactersPage.test.tsx  CharactersPage.tsx
frontend/src/services/: characters.ts
frontend/src/test/: server.ts  setup.ts  utils.tsx
frontend/src/test/msw/: handlers.ts
frontend/src/types/: characters.ts
migrations/: env.py
migrations/versions/: 2927db5bc92f_add_some_field_to_user.py  31ba4b09bc8d_init_schema.py  545ac68713fd_add_unique_index_on_characters_name.py  bc95845f9f74_create_characters_table.py
quickstart/: index.html
search/: search_index.json
site/: 404.html  index.html
site/cli-reference/: index.html
site/demo-cli-mvp/: index.html
site/quickstart/: index.html
site/search/: search_index.json
tests/: conftest.py  test_initiative_engine.py  test_log_export.py  test_smoke.py
tests/cli/: test_end_to_end.py
tests/core/: test_dice.py  test_initiative.py  test_log.py
