[tool.poetry]
name = "trpg-supporter"
version = "0.1.0"
description = "TRPG 지원 도구 백엔드 + 프론트엔드 프로젝트"
authors = ["cheska1025 <yessk1025@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = {extras = ["standard"], version = ">=0.35.0,<0.36.0"}
websockets = ">=15.0.1,<16.0.0"
python-multipart = ">=0.0.20,<0.0.21"
sqlalchemy = ">=2.0.42,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
alembic = ">=1.16.4,<2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.8"
black = "^25.1.0"
mypy = "^1.17.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pre-commit = "^4.2.0"
httpx = ">=0.27,<1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
