[tool.poetry]
name = "trpg-supporter"
version = "0.1.0"
description = "TRPG 지원 도구: 코어 엔진(주사위/이니시/로그) + CLI + 백엔드 스캐폴드"
authors = ["cheska1025 <yessk1025@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "core" },
  { include = "cli" },
  { include = "backend" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = { extras = ["standard"], version = ">=0.35.0,<0.36.0" }
websockets = ">=15.0.1,<16.0.0"
python-multipart = ">=0.0.20,<0.0.21"
sqlalchemy = ">=2.0.42,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
alembic = ">=1.16.4,<2.0.0"
# CLI / 출력
click = ">=8.1.7,<9.0.0"
rich = ">=13.7.0,<14.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.8"
black = "^25.1.0"
mypy = "^1.17.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pre-commit = "^4.2.0"
httpx = ">=0.27,<1.0"

[tool.poetry.scripts]
trpg = "cli.main:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# ---- Tool configs (권장) ----
[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # 줄 길이는 black이 관리
fix = true

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
no_implicit_optional = true
disallow_untyped_defs = true
pretty = true

[tool.pytest.ini_options]
addopts = "-q --cov=trpg-supporter --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
