[tool.poetry]
name = "trpg-supporter"
version = "0.1.0"
description = "TRPG Supporter backend (FastAPI + SQLAlchemy + Alembic)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic-settings = "^2.3.0"
sqlalchemy = "^2.0.30"
aiosqlite = "^0.20.0"
alembic = "^1.13.2"
click = "^8.1.7"
rich = "^13.7.1"
python-multipart = "^0.0.9"

# 테스트에서 사용 (HTTP 클라이언트, 비동기 테스트)
httpx = {version="^0.27.0", extras=["http2"]}

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
black = "^24.8.0"
mypy = "^1.11.0"
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.0"
types-setuptools = "^70.3.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# ---------------------------
# 코드 스타일/정적 검사 설정
# ---------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# import 정렬 활성화
extend-select = ["I"]
# Black과 충돌 방지
ignore = ["E203"]

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
  \.git
 |\.venv
 |alembic/versions
)/
'''

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_any_generics = true
pretty = true
plugins = []

# tests 디렉토리는 mypy 강도 약화(선택)
# [[tool.mypy.overrides]]
# module = ["backend.tests.*"]
# disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-ra -q --cov=backend --cov-report=term-missing"
testpaths = ["backend/tests"]

[tool.coverage.run]
branch = true
source = ["backend"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85
